--- a/docs/finalexam.Rmd
+++ b/docs/finalexam.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "finalexam"
 author: "박성준"
-date: :"`r Sys.Date()`"
+date: "`r Sys.Date()`"
 output: 
   html_document: 
     hightlight: textmate
